# Taller1-RocketLeague

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  client_client.cpp  client_client.h  client_gamestatus.cpp  client_gamestatus.h  client_gamestatusmonitor.cpp  client_gamestatusmonitor.h  client_lobby.cpp  client_lobby.h  client_main.cpp  client_renderer.cpp  client_renderer.h  client_thread.cpp  client_thread.h  client_threadcmdreader.cpp  client_threadcmdreader.h  client_threadlauncher.cpp  client_threadlauncher.h  client_threadreceiver.cpp  client_threadreceiver.h  client_threadsender.cpp  client_threadsender.h  common_blockingqueue.cpp  common_blockingqueue.h  common_comando.cpp  common_comando.h  common_command.cpp  common_command.h  common_protocol.cpp  common_socket.h  installer.sh  script.sh  server_main.cpp  server_server.cpp  server_server.h  server_thread_client.cpp  (+4 more)
Client/: BackGroundMusic.h  BackgroundMusic.cpp  CappedList.h  Client.cpp  Client.h  GameStatus.cpp  GameStatus.h  GameStatusMonitor.cpp  GameStatusMonitor.h  Lobby.cpp  Lobby.h  Main.cpp  ParserGameStatus.cpp  ParserGameStatus.h  Renderer.cpp  Renderer.h  ThreadCmdReader.cpp  ThreadCmdReader.h  ThreadLauncher.cpp  ThreadLauncher.h  ThreadReceiver.cpp  ThreadReceiver.h  ThreadSender.cpp  ThreadSender.h  WindowRenderer.cpp  WindowRenderer.h  client_client.h  client_lobby.h  client_main.cpp  client_renderer.cpp  client_renderer.h  client_threadlauncher.cpp  client_threadlauncher.h  client_threadreceiver.cpp  client_threadreceiver.h  client_threadsender.cpp  client_threadsender.h
Client/Config/: ClientConfig.cpp  ClientConfig.h
Client/Lobby/: DialogCreateGame.cpp  DialogCreateGame.h  DialogJoinGame.cpp  DialogJoinGame.h  DialogListGames.cpp  DialogListGames.h  GameStatistics.cpp  GameStatistics.h  GameStatisticsForm.cpp  GameStatisticsForm.h  Lobby.cpp  Lobby.h  LobbyForm.cpp  LobbyForm.h  ThreadServerStartGame.cpp  ThreadServerStartGame.h
Client/Model/: BallModel.cpp  BallModel.h  PlayerModel.cpp  PlayerModel.h  ScoreModel.cpp  ScoreModel.h
Client/SDL/: Animation.cpp  Animation.h  Ball.cpp  Ball.h  Bow.cpp  Bow.h  CoordsTransformator.cpp  CoordsTransformator.h  DigitSeparator.cpp  DigitSeparator.h  Player.cpp  Player.h  ReplayFrame.h  Replayframe.cpp  Scene.cpp  Scene.h  Score.cpp  Score.h  Timer.cpp  Timer.h
Common/: BlockingQueue.cpp  BlockingQueue.h  Command.cpp  Command.h  GameStatus.cpp  GameStatus.h  GameStatusSerializer.cpp  GameStatusSerializer.h  LibError.cpp  NonBlockingQueue.h  Protocol.cpp  Protocol.h  Queue.h  Resolver.cpp  Socket.cpp  Socket.h  Thread.cpp  common_blockingqueue.cpp  common_blockingqueue.h  common_command.cpp  common_liberror.cpp  common_protocol.h  common_resolver.cpp  common_resolver.h  common_socket.cpp  common_thread.cpp
Common/Config/: ClientConfig.cpp  ClientConfig.h  CommonConfig.cpp  CommonConfig.h  ServerConfig.cpp  ServerConfig.h
Common/Constants/: ActionsClient.h  ActionsLobby.h
Common/Model/: BallModel.cpp  BallModel.h  PlayerModel.cpp  PlayerModel.h  ScoreModel.h
Documentacion/: client.puml  clientthreads.puml  protocoloServerAlCliente.txt
Server/: ClientConnection.cpp  ClientConnection.h  ClientIdGenerator.cpp  ClientIdGenerator.h  Game.cpp  Game.h  GameMonitor.cpp  GameMonitor.h  Gameloop.cpp  Gameloop.h  Main.cpp  Server.cpp  Server.h  ThreadClient.cpp  ThreadClient.h  ThreadClientAcceptor.cpp  ThreadClientAcceptor.h  ThreadClientBroadcaster.cpp  ThreadClientBroadcaster.h  ThreadClientLobby.cpp  ThreadClientLobby.h  ThreadClientReceiver.cpp  ThreadClientReceiver.h  ThreadClientReciver.cpp  ThreadClientReciver.h  ThreadClientSender.cpp  ThreadClientSender.h  server_main.cpp  server_server.cpp  server_server.h  server_thread_client.cpp  server_thread_client.h  server_thread_client_reciver.cpp  server_thread_client_reciver.h
Server/ActionsClient/: ActionClientDoGoldenShot.cpp  ActionClientDoGoldenShot.h  ActionClientDoPurpleShot.cpp  ActionClientDoPurpleShot.h  ActionClientDoRedShot.cpp  ActionClientDoRedShot.h  ActionClientDoSkipReplay.cpp  ActionClientDoSkipReplay.h  ActionClientFlipLeft.cpp  ActionClientFlipLeft.h  ActionClientFlipRight.cpp  ActionClientFlipRight.h  ActionClientJump.cpp  ActionClientJump.h  ActionClientLeft.cpp  ActionClientLeft.h  ActionClientRight.cpp  ActionClientRight.h  ActionClientStartAcceleratingBackwards.cpp  ActionClientStartAcceleratingBackwards.h  ActionClientStartAcceleratingForward.cpp  ActionClientStartAcceleratingForward.h  ActionClientStartTurning.cpp  ActionClientStartTurning.h  ActionClientStopAccelerating.cpp  ActionClientStopAccelerating.h  ActionClientStopFlip.cpp  ActionClientStopFlip.h  ActionClientStopTurbo.cpp  ActionClientStopTurbo.h  ActionClientTurbo.cpp  ActionClientTurbo.h  ActionsClient.cpp  ActionsClient.h
Server/ActionsLobby/: ActionLobbyCreate.cpp  ActionLobbyCreate.h  ActionLobbyJoin.cpp  ActionLobbyJoin.h  ActionLobbyList.cpp  ActionLobbyList.h  ActionLobbySetName.cpp  ActionLobbySetName.h  ActionsLobby.cpp  ActionsLobby.h  ActionsLobbyParser.cpp  ActionsLobbyParser.h
Server/Config/: ServerConfig.cpp  ServerConfig.h
Server/Game/: Game.cpp  Game.h  GameLoop.cpp  GameLoop.h  GameMonitor.cpp  GameMonitor.h
Server/Lobby/: LobbyCommand.cpp  LobbyCommand.h  LobbyCommandCreate.cpp  LobbyCommandCreate.h  LobbyCommandJoin.cpp  LobbyCommandJoin.h  LobbyCommandList.cpp  LobbyCommandList.h  LobbyParser.cpp  LobbyParser.h
Server/LobbyCommands/: LobbyCommand.h  LobbyCommandCreate.cpp  LobbyCommandCreate.h  LobbyCommandJoin.cpp  LobbyCommandJoin.h  LobbyCommandList.cpp  LobbyCommandList.h
Server/Physics/: BallPhysics.cpp  BallPhysics.h  Box.cpp  Box.h  Car.cpp  Car.h  ContactListener.cpp  ContactListener.h  EntityCategory.h  GoalSensor.cpp  GoalSensor.h  Physics.cpp  Physics.h  PhysicsConfig.h  QueryCallback.h  SavingArea.cpp  (+1 more)
Test/: main.cpp
Tests/: CMakeLists.txt  ClientIdGeneratorTest.cpp  GameMonitorTest.cpp  GameTest.cpp  ProtocolTest.cpp
UI/: dialoglistgames.ui  gamestatisticsform.ui
cmake/: googletest.cmake
config/: client.yaml  common.yaml  server.yaml
(+32 files in other folders)
